service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
